--- a/sections/icon-box.liquid
+++ b/sections/icon-box.liquid
@@ -111,6 +111,8 @@
             >
               {%- if block.settings.icon != blank -%}
                 {%- render 'responsive-image', image: block.settings.icon -%}
+              {%- elsif block.settings.icon_font != blank -%}
+                <i class="{{ block.settings.icon_font }}" style="font-size: {{ icon_width }}px; color: #666;"></i>
               {%- else -%}
                 {%- render 'responsive-image' -%}
               {%- endif -%}
@@ -347,6 +349,12 @@
         },
         {
           "type": "text",
+          "id": "icon_font",
+          "label": "Icon Font Class",
+          "info": "Enter icon font class (e.g., icon-star1, icon-refresh-ccw, icon-arrow-left)"
+        },
+        {
+          "type": "text",
           "id": "heading",
           "label": "Heading",
           "default": "This is heading text"
@@ -367,22 +375,25 @@
         {
           "type": "iconbox",
           "settings": {
-            "heading": "Free Shipping",
-            "description": "<p>Get complimentary ground shipping on every order. Don't love it? Send it back, on us.</p>"
+            "icon_font": "icon-star1",
+            "heading": "High Quality Products",
+            "description": "<p>Top rated quality, satisfy the most demanding customers when using our products.</p>"
           }
         },
         {
           "type": "iconbox",
           "settings": {
-            "heading": "Free Returns",
+            "icon_font": "icon-refresh-ccw",
+            "heading": "Recyclable Materials",
+            "description": "<p>Products are recycled from damaged materials, maximum environmental protection.</p>"
+          }
+        },
+        {
+          "type": "iconbox",
+          "settings": {
+            "icon_font": "icon-arrow-left",
+            "heading": "Easy Return Policies",
             "description": "<p>Free returns within 10 days, please make sure the items are in undamaged condition.</p>"
-          }
-        },
-        {
-          "type": "iconbox",
-          "settings": {
-            "heading": "Support Online",
-            "description": "<p>We support customers 24/7, send questions we will solve for you immediately.</p>"
           }
         }
       ]
